add inc_train, transform, docs

--- a/examples/DINA/DINA.ipynb
+++ b/examples/DINA/DINA.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_id': 0, 'item_id': 14, 'score': 0.0} {'user_id': 0, 'item_id': 13, 'score': 1.0}\n"
+      "{'user_id': 0, 'item_id': 13, 'score': 1.0} {'user_id': 0, 'item_id': 18, 'score': 0.0}\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -120,7 +120,7 @@
        "(67344, 16836)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -156,13 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:save parameters to dina.params\n"
+     ]
+    }
+   ],
    "source": [
     "from EduCDM import DINA\n",
     "\n",
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -196,14 +204,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "evaluating: 100%|████████████████████████████████████████████████████████████| 16836/16836 [00:00<00:00, 230762.93it/s]"
+      "INFO:root:load parameters from dina.params\n",
+      "evaluating: 100%|████████████████████████████████████████████████████████████| 16836/16836 [00:00<00:00, 154556.46it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.428138, MAE: 0.355052\n"
+      "RMSE: 0.427923, MAE: 0.355384\n"
      ]
     },
     {
@@ -218,6 +227,49 @@
     "cdm.load(\"dina.params\")\n",
     "rmse, mae = cdm.eval(test_set)\n",
     "print(\"RMSE: %.6f, MAE: %.6f\" % (rmse, mae))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Incremental Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = [{'user_id': 0, 'item_id': 0, 'score': 1.0}, {'user_id': 1, 'item_id': 2, 'score': 0.0}]\n",
+    "cdm.inc_train(new_data, epoch=2, epsilon=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate User's State"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id of user's state is 63, state is [0. 0. 0. 0. 0. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stu_rec = np.array([0, 1, -1, 0, -1, 0, 1, 1, 0, 1, 0, 1, 0, -1, -1, -1, -1, 0, 1, -1])\n",
+    "dia_id, dia_state = cdm.transform(stu_rec)\n",
+    "print(\"id of user's state is %d, state is \" % dia_id + str(dia_state))"
    ]
   },
   {
