annotation and description of transform

--- a/examples/DINA/DINA.ipynb
+++ b/examples/DINA/DINA.ipynb
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_id': 0, 'item_id': 13, 'score': 1.0} {'user_id': 0, 'item_id': 18, 'score': 0.0}\n"
+      "{'user_id': 0, 'item_id': 4, 'score': 1.0} {'user_id': 0, 'item_id': 9, 'score': 1.0}\n"
      ]
     }
    ],
@@ -205,14 +205,14 @@
      "output_type": "stream",
      "text": [
       "INFO:root:load parameters from dina.params\n",
-      "evaluating: 100%|████████████████████████████████████████████████████████████| 16836/16836 [00:00<00:00, 154556.46it/s]"
+      "evaluating: 100%|████████████████████████████████████████████████████████████| 16836/16836 [00:00<00:00, 138079.90it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.427923, MAE: 0.355384\n"
+      "RMSE: 0.426995, MAE: 0.353971\n"
      ]
     },
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +270,28 @@
     "stu_rec = np.array([0, 1, -1, 0, -1, 0, 1, 1, 0, 1, 0, 1, 0, -1, -1, -1, -1, 0, 1, -1])\n",
     "dia_id, dia_state = cdm.transform(stu_rec)\n",
     "print(\"id of user's state is %d, state is \" % dia_id + str(dia_state))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To see the relation between dia_id and dia_state\n",
+    "dia_state == cdm.all_states[dia_id]"
    ]
   },
   {
