--- a/examples/NCDM/NCDM.ipynb
+++ b/examples/NCDM/NCDM.ipynb
@@ -170,9 +170,9 @@
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x1dc4fa9bcd0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x1dc4fa8c1f0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x1dc4fa8c3d0>)"
+       "(<torch.utils.data.dataloader.DataLoader at 0x2b8f1ecee20>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x2b8f1eba1c0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x2b8f1eba3a0>)"
       ]
      },
      "execution_count": 4,
@@ -236,82 +236,82 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|█████████████████████████████████████████████████████████████████████| 5815/5815 [01:14<00:00, 77.77it/s]\n",
-      "Evaluating:   5%|███▎                                                                | 39/801 [00:00<00:01, 384.62it/s]"
+      "Epoch 0: 100%|█████████████████████████████████████████████████████████████████████| 5815/5815 [01:14<00:00, 77.69it/s]\n",
+      "Evaluating:   5%|███▍                                                                | 41/801 [00:00<00:02, 356.55it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0] average loss: 0.647750\n"
+      "[Epoch 0] average loss: 0.650993\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|███████████████████████████████████████████████████████████████████| 801/801 [00:02<00:00, 394.16it/s]\n",
-      "Epoch 1:   0%|                                                                        | 8/5815 [00:00<01:13, 78.62it/s]"
+      "Evaluating: 100%|███████████████████████████████████████████████████████████████████| 801/801 [00:02<00:00, 380.23it/s]\n",
+      "Epoch 1:   0%|                                                                       | 10/5815 [00:00<01:06, 86.67it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0] auc: 0.713099, accuracy: 0.665235\n"
+      "[Epoch 0] auc: 0.712843, accuracy: 0.661056\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|█████████████████████████████████████████████████████████████████████| 5815/5815 [01:11<00:00, 81.33it/s]\n",
-      "Evaluating:  10%|██████▌                                                             | 77/801 [00:00<00:01, 373.29it/s]"
+      "Epoch 1: 100%|█████████████████████████████████████████████████████████████████████| 5815/5815 [01:10<00:00, 82.66it/s]\n",
+      "Evaluating:   5%|███▍                                                                | 40/801 [00:00<00:01, 397.00it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1] average loss: 0.527741\n"
+      "[Epoch 1] average loss: 0.528788\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|███████████████████████████████████████████████████████████████████| 801/801 [00:02<00:00, 392.39it/s]\n",
-      "Epoch 2:   0%|                                                                        | 8/5815 [00:00<01:13, 79.40it/s]"
+      "Evaluating: 100%|███████████████████████████████████████████████████████████████████| 801/801 [00:02<00:00, 399.81it/s]\n",
+      "Epoch 2:   0%|                                                                        | 9/5815 [00:00<01:12, 80.06it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1] auc: 0.741349, accuracy: 0.724440\n"
+      "[Epoch 1] auc: 0.741101, accuracy: 0.722018\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2: 100%|█████████████████████████████████████████████████████████████████████| 5815/5815 [01:11<00:00, 81.30it/s]\n",
-      "Evaluating:   5%|███▍                                                                | 41/801 [00:00<00:02, 375.66it/s]"
+      "Epoch 2: 100%|█████████████████████████████████████████████████████████████████████| 5815/5815 [01:10<00:00, 83.00it/s]\n",
+      "Evaluating:   5%|███▍                                                                | 41/801 [00:00<00:01, 394.46it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 2] average loss: 0.465881\n"
+      "[Epoch 2] average loss: 0.466515\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|███████████████████████████████████████████████████████████████████| 801/801 [00:02<00:00, 388.26it/s]\n",
+      "Evaluating: 100%|███████████████████████████████████████████████████████████████████| 801/801 [00:02<00:00, 390.05it/s]\n",
       "INFO:root:save parameters to ncdm.snapshot\n"
      ]
     },
@@ -319,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 2] auc: 0.749514, accuracy: 0.726509\n"
+      "[Epoch 2] auc: 0.749467, accuracy: 0.728032\n"
      ]
     }
    ],
@@ -327,7 +327,7 @@
     "from EduCDM import NCDM\n",
     "\n",
     "cdm = NCDM(knowledge_n, item_n, user_n)\n",
-    "cdm.train(train_set, valid_set, epoch=3, device=\"cuda\", silence=True)\n",
+    "cdm.train(train_set, valid_set, epoch=3, device=\"cuda\")\n",
     "cdm.save(\"ncdm.snapshot\")"
    ]
   },
@@ -348,14 +348,14 @@
      "output_type": "stream",
      "text": [
       "INFO:root:load parameters from ncdm.snapshot\n",
-      "Evaluating: 100%|█████████████████████████████████████████████████████████████████| 1743/1743 [00:02<00:00, 767.79it/s]"
+      "Evaluating: 100%|█████████████████████████████████████████████████████████████████| 1743/1743 [00:02<00:00, 763.27it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "auc: 0.752554, accuracy: 0.728515\n"
+      "auc: 0.751848, accuracy: 0.730273\n"
      ]
     },
     {
