--- a/examples/NCDM/NCDM.ipynb
+++ b/examples/NCDM/NCDM.ipynb
@@ -7,7 +7,7 @@
     "# Neural Cognitive Diagnosis Model (NCDM)\n",
     "This notebook will show you how to train and use the NCDM. First, we will show how to get the data (here we use a0910 as the dataset). Then we will show how to train a NCDM and perform the parameters persistence. At last, we will show how to load the parameters from the file and evaluate on the test dataset.\n",
     "\n",
-    "The script version could be found in NCDM.py"
+    "The script version could be found in [NCDM.py](NCDM.py)"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "# Data Preparation\n",
-    "Before we process the data, we need to first acquire the dataset which is shown in this prepare_dataset.ipynb"
+    "Before we process the data, we need to first acquire the dataset which is shown in this [prepare_dataset.ipynb](prepare_dataset.ipynb)"
    ]
   },
   {
