[refactor] update examples of DINA and FuzzyCDF

--- a/examples/DINA/DINA.ipynb
+++ b/examples/DINA/DINA.ipynb
@@ -31,63 +31,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'user_id': 0, 'item_id': 4, 'score': 1.0} {'user_id': 0, 'item_id': 9, 'score': 1.0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Data preprocessing, split train/valid/test data\n",
-    "\n",
-    "import numpy as np\n",
-    "import random\n",
-    "import json\n",
-    "\n",
-    "train_ratio = 0.8\n",
-    "valid_ratio = 0\n",
-    "# Q matrix\n",
-    "np.savetxt(\"../../data/math2015/Math1/q_m.csv\", np.loadtxt(\"../../data/math2015/Math1/q.txt\", dtype=int), delimiter=',', fmt='%d')\n",
-    "\n",
-    "# response matrix, split dataset\n",
-    "R = (np.loadtxt(\"../../data/math2015/Math1/data.txt\") == 1).astype(float)\n",
-    "stu_num, prob_num = R.shape[0], R.shape[1]\n",
-    "train_logs, valid_logs, test_logs = [], [], []\n",
-    "for stu in range(stu_num):\n",
-    "    stu_logs = []\n",
-    "    for prob in range(prob_num):\n",
-    "        log = {'user_id': int(stu), 'item_id': int(prob), 'score': R[stu][prob]}\n",
-    "        stu_logs.append(log)\n",
-    "    random.shuffle(stu_logs)\n",
-    "    train_logs += stu_logs[: int(train_ratio * prob_num)]\n",
-    "    valid_logs += stu_logs[int(train_ratio * prob_num): int(train_ratio * prob_num) + int(valid_ratio * prob_num)]\n",
-    "    test_logs += stu_logs[int(train_ratio * prob_num) + int(valid_ratio * prob_num):]\n",
-    "\n",
-    "with open(\"../../data/math2015/Math1/train_data.json\", 'w', encoding='utf8') as file:\n",
-    "    json.dump(train_logs, file, indent=4, ensure_ascii=False)\n",
-    "with open(\"../../data/math2015/Math1/valid_data.json\", 'w', encoding='utf8') as file:\n",
-    "    json.dump(valid_logs, file, indent=4, ensure_ascii=False)\n",
-    "with open(\"../../data/math2015/Math1/test_data.json\", 'w', encoding='utf8') as file:\n",
-    "    json.dump(test_logs, file, indent=4, ensure_ascii=False)\n",
-    "\n",
-    "print(train_logs[0], test_logs[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data from files\n",
+    "import numpy as np\n",
+    "import json\n",
     "\n",
     "q_m = np.loadtxt(\"../../data/math2015/Math1/q_m.csv\", dtype=int, delimiter=',')\n",
     "prob_num, know_num = q_m.shape[0], q_m.shape[1]\n",
@@ -103,6 +52,23 @@
     "# testing data\n",
     "with open(\"../../data/math2015/Math1/test_data.json\", encoding='utf-8') as file:\n",
     "    test_set = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'user_id': 0, 'item_id': 0, 'score': 1.0} {'user_id': 0, 'item_id': 2, 'score': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_set[0], test_set[0])"
    ]
   },
   {
