[refactor] change files location for adding GD-DINA

--- a/examples/DINA/EM/DINA.ipynb
+++ b/examples/DINA/EM/DINA.ipynb
@@ -38,11 +38,11 @@
     "import numpy as np\n",
     "import json\n",
     "\n",
-    "q_m = np.loadtxt(\"../../data/math2015/Math1/q_m.csv\", dtype=int, delimiter=',')\n",
+    "q_m = np.loadtxt(\"../../../data/math2015/Math1/q_m.csv\", dtype=int, delimiter=',')\n",
     "prob_num, know_num = q_m.shape[0], q_m.shape[1]\n",
     "\n",
     "# training data\n",
-    "with open(\"../../data/math2015/Math1/train_data.json\", encoding='utf-8') as file:\n",
+    "with open(\"../../../data/math2015/Math1/train_data.json\", encoding='utf-8') as file:\n",
     "    train_set = json.load(file)\n",
     "stu_num = max([x['user_id'] for x in train_set]) + 1\n",
     "R = -1 * np.ones(shape=(stu_num, prob_num))\n",
@@ -50,7 +50,7 @@
     "    R[log['user_id'], log['item_id']] = log['score']\n",
     "\n",
     "# testing data\n",
-    "with open(\"../../data/math2015/Math1/test_data.json\", encoding='utf-8') as file:\n",
+    "with open(\"../../../data/math2015/Math1/test_data.json\", encoding='utf-8') as file:\n",
     "    test_set = json.load(file)"
    ]
   },
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "from EduCDM import DINA\n",
+    "from EduCDM import EMDINA as DINA\n",
     "\n",
     "cdm = DINA(R, q_m, stu_num, prob_num, know_num, skip_value=-1)\n",
     "\n",
