[test] update example of EMDINA

--- a/examples/DINA/EM/DINA.ipynb
+++ b/examples/DINA/EM/DINA.ipynb
@@ -63,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_id': 0, 'item_id': 0, 'score': 1.0} {'user_id': 0, 'item_id': 2, 'score': 1.0}\n"
+      "{'user_id': 0, 'item_id': 5, 'score': 1.0} {'user_id': 0, 'item_id': 8, 'score': 1.0}\n"
      ]
     }
    ],
@@ -171,21 +171,14 @@
      "output_type": "stream",
      "text": [
       "INFO:root:load parameters from dina.params\n",
-      "evaluating: 100%|████████████████████████████████████████████████████████████| 16836/16836 [00:00<00:00, 138079.90it/s]"
+      "evaluating: 100%|█████████████████████████████████████████████████████████████| 16836/16836 [00:00<00:00, 67652.66it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.426995, MAE: 0.353971\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "RMSE: 0.425828, MAE: 0.353139\n"
      ]
     }
    ],
