[docs] add explanations for implementation details of GD-DINA

--- a/examples/DINA/GD/DINA.ipynb
+++ b/examples/DINA/GD/DINA.ipynb
@@ -242,12 +242,34 @@
    "source": [
     "cdm.load(\"dina.params\")\n",
     "auc, accuracy = cdm.eval(test)\n",
-    "print(\"auc: %.6f, accuracy: %.6f\" % (auc, accuracy))"
+    "print(\"auc: %.6f, accuracy: %.6f\" % (auc, accuracy))\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Implementation Details\n",
+    "\n",
+    "In the original formulation of DINA, i.e., $p = (1 - s)^\\eta * g ^ {1 - \\eta}$, where $\\eta = \\prod_{k \\in K_e} \\theta_k, \\theta_k\\in\\{0,1\\}$,\n",
+    "it is hard to apply gradient descent to the binary value $\\theta$.\n",
+    "\n",
+    "Therefore, to avoid this problem, we propose two ways (temperature softmax and straight through estimator) respectively\n",
+    "where we use several tricks.\n",
+    "\n",
+    "* Straight-Through Estimator (STE): in STE, we use a continuous variable $\\theta_b$ to get $\\theta$, i.e., $\\theta = sign_{STE}(\\theta_b)$, where $sign_{STE}$ is a threshold function whose derivative is not zero [[explanation](https://www.hassanaskary.com/python/pytorch/deep%20learning/2020/09/19/intuitive-explanation-of-straight-through-estimators.html)].\n",
+    "* Tempered Softmax (TS): TBA\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
